--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,5 +7,25 @@
 
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="section-hero">
+      <div class="hero container">
+        <div class="hero-text-box">
+          <h1 class="hero-heading">
+            Encontre os <span>melhores artigos</span> de programação em um só
+            lugar
+          </h1>
+
+          <p class="hero-description">
+            Explore o topo da programação em um só lugar! Seu destino único para
+            dicas e tendências atuais.
+          </p>
+
+          <a href="#" class="btn hero-btn">Buscar artigos</a>
+        </div>
+
+        <img src="/image/illustra.png" alt="Illustration" class="hero-img" />
+      </div>
+    </section>
+  </body>
 </html>
