feat: add article section

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
+    <!-- Hero section -->
+
     <section class="section-hero">
       <div class="hero container">
         <div class="hero-text-box">
@@ -27,5 +29,121 @@
         <img src="/image/illustra.png" alt="Illustration" class="hero-img" />
       </div>
     </section>
+
+    <!-- Articles Section -->
+    <div class="section-articles">
+      <article class="container">
+        <h2 class="article-heading">Artigos recomendados</h2>
+        <div class="grid grid--3-cols grid--center-v">
+          <div class="article-card">
+            <img
+              src="/image/image-1.png"
+              alt="JavaScript code"
+              class="article-img"
+            />
+
+            <div class="article-text-box">
+              <h3 class="card-heading">
+                O que é linguagem de programação? Conheça as principais
+              </h3>
+              <p class="card-description">
+                Uma das mais populares vertentes da tecnologia da informação, a
+                área de...
+              </p>
+            </div>
+          </div>
+
+          <div class="article-card">
+            <img
+              src="/image/image-2.png"
+              alt="Python Code"
+              class="article-img"
+            />
+
+            <div class="article-text-box">
+              <h3 class="card-heading">
+                Python: por que a linguagem é tão usada para Data Science e
+                finanças?
+              </h3>
+              <p class="card-description">
+                O mundo da programação conta com algumas opções de linguagem
+                para...
+              </p>
+            </div>
+          </div>
+
+          <div class="article-card">
+            <img
+              src="/image/image-3.png"
+              alt="GitHub logo"
+              class="article-img"
+            />
+
+            <div class="article-text-box">
+              <h3 class="card-heading">
+                GitHub tem receita de US$ 1 bilhão e 90 milhões de usuários
+              </h3>
+              <p class="card-description">
+                O popular serviço de repositório de código GitHub foi adquirido
+                pela...
+              </p>
+            </div>
+          </div>
+
+          <div class="article-card">
+            <img
+              src="/image/image-4.png"
+              alt="Git Graph logo"
+              class="article-img"
+            />
+
+            <div class="article-text-box">
+              <h3 class="card-heading">
+                15 comandos no GIT que os desenvolvedores precisam saber
+              </h3>
+              <p class="card-description">
+                Dominar os comandos GIT é uma habilidade que se conquista com...
+              </p>
+            </div>
+          </div>
+
+          <div class="article-card">
+            <img
+              src="/image/image-5.png"
+              alt="GitHub Drawing Photos"
+              class="article-img"
+            />
+
+            <div class="article-text-box">
+              <h3 class="card-heading">
+                GIT e GitHub: o que são e quais as diferenças entre eles?
+              </h3>
+              <p class="card-description">
+                Git e GibHub são dois softwares de controle de versão essenciais
+                para...
+              </p>
+            </div>
+          </div>
+
+          <div class="article-card">
+            <img
+              src="/image/image-6.png"
+              alt="GitHub Copilot logo"
+              class="article-img"
+            />
+
+            <div class="article-text-box">
+              <h3 class="card-heading">
+                GitHub Copilot ganha integração com GPT-4 e interface
+                conversacional
+              </h3>
+              <p class="card-description">
+                O GitHub Copilot, ferramenta de desenvolvimento baseada em IA...
+              </p>
+            </div>
+          </div>
+        </div>
+      </article>
+    </div>
   </body>
 </html>
