--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,15 +47,30 @@ body {
   margin: 0 auto;
 }
 
+.grid {
+  display: grid;
+  column-gap: 3.2rem;
+  row-gap: 4.8rem;
+  flex: 1;
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--center-v {
+  align-items: center;
+}
+
 .btn:link,
 .btn:visited {
   padding: 1.4rem 3.2rem;
   border-radius: 4px;
 }
 
-/****************/
+/*****************/
 /* HERO SECTION */
-/****************/
+/***************/
 
 /* Hero layout */
 
@@ -118,4 +133,69 @@ body {
 
 .hero-img {
   height: auto;
+}
+
+/*********************/
+/* ARTICLES SECTION */
+/*******************/
+
+/* Section Article Layout */
+
+.section-articles {
+  padding: 8rem 0;
+}
+
+/* Section Article Content Styles */
+
+.article-heading {
+  font-size: 3.2rem;
+  font-weight: 600;
+  line-height: 1.17;
+
+  margin-bottom: 11.3rem;
+}
+
+/* Card Layout */
+
+.article-card {
+  width: 38.4rem;
+  height: 35.7rem;
+
+  border: 2px solid var(--gray-30);
+  border-radius: 0.6rem;
+
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.1);
+
+  overflow: hidden;
+}
+
+/* Card Content Styles */
+
+.article-img {
+  width: 100%;
+  height: auto;
+}
+
+.article-text-box {
+  margin: 3.2rem 2.4rem;
+  text-align: left;
+}
+
+.card-heading {
+  width: 33.6rem;
+  height: 5.2rem;
+
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 26px;
+
+  margin-bottom: 1.2rem;
+}
+
+.card-description {
+  width: 33.6rem;
+  height: 5.4rem;
+
+  font-size: 1.8rem;
+  line-height: 27px;
 }
